js/src/jit-test/tests/binast/invalid/catch-scope-missing.binjs
BINJS
[
GRAMMAR
]
identity
;
AssertedBlockScope
Block
.
AssertedBoundNamesScope2AssertedScriptGlobalScope
"
BindingIdentifier
CatchClause
Script
"
TryCatchStatement
[
STRINGS
]
identity
;
e
[
TREE
]
identity
;
.
